web/assets/css/main.css
html,
body {
  margin: 0;
  padding: 0;
}

body {
  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
  line-height: 1.4em;
  background: #eaeaea url('/assets/images/bg.png');
  color: #4d4d4d;
  width: 550px;
  margin: 0 auto;
  font-smoothing: antialiased;
}

button {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  color: inherit;
  appearance: none;
}

#todoapp {
  background: #fff;
  background: rgba(255, 255, 255, 0.9);
  margin: 130px 0 40px 0;
  border: 1px solid #ccc;
  position: relative;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2),
        0 25px 50px 0 rgba(0, 0, 0, 0.15);
}

#todoapp:before {
  content: '';
  border-left: 1px solid #f5d6d6;
  border-right: 1px solid #f5d6d6;
  width: 2px;
  position: absolute;
  top: 0;
  left: 40px;
  height: 100%;
}

#todoapp h1 {
  position: absolute;
  top: -120px;
  width: 100%;
  font-size: 90px;
  font-weight: 100;
  text-align: center;
  color: rgba(175, 47, 47, 0.15);
  text-rendering: optimizeLegibility;
}

#todoapp input::-webkit-input-placeholder {
  font-style: italic;
}

#todoapp input:-moz-placeholder {
  font-style: italic;
  color: #a9a9a9;
}

#header {
  padding-top: 15px;
  border-radius: inherit;
}

#header:before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  height: 15px;
  z-index: 2;
  border-bottom: 1px solid #6c615c;
  background: #8d7d77;
  background: linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
  border-top-left-radius: 1px;
  border-top-right-radius: 1px;
}

#new-todo {
  border: none;
  background: rgba(0, 0, 0, 0.02);
  z-index: 2;
  box-shadow: none;
}

#appbundle_todotype {
  padding: 16px 16px 16px 60px;
  border: none;
  background: rgba(0, 0, 0, 0.02);
  z-index: 2;
  box-shadow: none;
}

#main {
  position: relative;
  z-index: 2;
  border-top: 1px dotted #adadad;
}

label[for='toggle-all'] {
  display: none;
}

#toggle-all {
  position: absolute;
  top: -42px;
  left: -4px;
  width: 40px;
  text-align: center;
  border: none; 
}

#toggle-all:before {
  content: '»';
  font-size: 28px;
  color: #d9d9d9;
  padding: 0 25px 7px;
}

#toggle-all:checked:before {
  color: #737373;
}

#todo-list {
  margin: 0;
  padding: 0;
  list-style: none;
}

#todo-list li {
  position: relative;
  font-size: 24px;
  border-bottom: 1px dotted #ccc;
}

#todo-list li:last-child {
  border-bottom: none;
}

#todo-list li.editing {
  border-bottom: none;
  padding: 0;
}

#todo-list li.editing .edit {
  display: block;
  width: 506px;
  padding: 13px 17px 12px 17px;
  margin: 0 0 0 43px;
}

#todo-list li.editing .view {
  display: none;
}

#todo-list li .toggle {
  text-align: center;
  width: 40px;
  height: auto;
  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto 0;
  border: none;
  appearance: none;
}

#todo-list li .toggle:after {
  content: '✔';
  line-height: 43px; 
  font-size: 20px;
  color: #d9d9d9;
  text-shadow: 0 -1px 0 #bfbfbf;
}

#todo-list li .toggle:checked:after {
  color: #85ada7;
  text-shadow: 0 1px 0 #669991;
  bottom: 1px;
  position: relative;
}

#todo-list li label {
  word-break: break-word;
  padding: 15px;
  margin-left: 45px;
  display: block;
  line-height: 1.2;
  transition: color 0.4s;
}

#todo-list li.completed label {
  color: #a9a9a9;
  text-decoration: line-through;
}

#todo-list li .destroy {
  display: none;
  position: absolute;
  top: 4px;
  right: 1px;
  bottom: 0;
  width: 40px;
  height: 40px;
  margin: auto 0 auto 5px;
  font-size: 22px;
  color: #a88a8a;
  transition: all 0.2s;
}

#todo-list li .destroy:hover {
  text-shadow: 0 0 1px #000,
         0 0 10px rgba(199, 107, 107, 0.8);
  transform: scale(1.3);
}

#todo-list li .destroy:after {
  content: '✖';
}

#todo-list li:hover .destroy {
  display: block;
}

#todo-list li .edit {
  display: none;
}

#todo-list li.editing:last-child {
  margin-bottom: -1px;
}

.todolist-label {
    display: inline-block;
    width: 75%;
}

#form-footer {
  color: #777;
  padding: 0 15px;
  position: absolute;
  right: 0;
  bottom: -31px;
  left: 0;
  height: 20px;
  z-index: 1;
  text-align: center;
}

#form-footer:before {
  content: '';
  position: absolute;
  right: 0;
  bottom: 31px;
  left: 0;
  height: 50px;
  z-index: -1;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
        0 6px 0 -3px rgba(255, 255, 255, 0.8),
        0 7px 1px -3px rgba(0, 0, 0, 0.3),
        0 43px 0 -6px rgba(255, 255, 255, 0.8),
        0 44px 2px -6px rgba(0, 0, 0, 0.2);
}

#count-todos {
  float: left;
  text-align: left;
}

#clear-completed {
    background: rgba(0, 0, 0, 0.1);
    border-radius: 3px;
    box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.2);
    color:#777;
    float: right;
    font-size: 11px;
    line-height: 20px;
    margin: 0;
    padding: 0 10px;
    position: relative;
    text-decoration: none;
}

#clear-completed:hover {
  background: rgba(0, 0, 0, 0.15);
  box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.3);
}

#footer {
  margin: 65px auto 0;
  color: #a6a6a6;
  font-size: 12px;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
  text-align: center;
}

#footer a {
  color: inherit;
}

.hidden{
  display:none;
}

